Fixed invisible Linux Titlebar

--- a/Raw/Dream Frame Titlebar/Titlebar.css
+++ b/Raw/Dream Frame Titlebar/Titlebar.css
@@ -3,14 +3,14 @@
     display: none;
 }
 /* If Transparent is on and titlebar goes missing on Linux, this will fix that ;) */
-.platform-linux::before {
+.app-19_DXt.platform-linux.pc-app::before {
     content: "";
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 100%;
     height: 13px;
     -webkit-app-region: drag;
+    width: 100%;
 }
 /* Windows Titlebar Icons */
 .powercord-games-bar .powercord-game-img {
